force-app/main/default/objects/Flame_Product__c/fields/Mounting__c.field-meta.xml
<CustomField>
    <fullName>Mounting__c</fullName>
    <label>Mounting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-Line Straight Pipe</fullName>
            </value>
            <value>
                <fullName>In-Line Pipe with Bend</fullName>
            </value>
            <value>
                <fullName>End-of-Line</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>