force-app/main/default/objects/Flame_Product__c/fields/Nace_Backend__c.field-meta.xml
<CustomField>
    <fullName>Nace_Backend__c</fullName>
    <formula>IF(NACE__c,&apos;Y&apos;,&apos;N&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nace Backend</label>
    <type>Text</type>
</CustomField>