force-app/main/default/objects/Flame_Product__c/fields/OB210__c.field-meta.xml
<CustomField>
    <fullName>OB210__c</fullName>
    <label>OB210</label>
    <length>255</length>
    <type>Text</type>
</CustomField>