force-app/main/default/objects/Flame_Product__c/fields/OB230__c.field-meta.xml
<CustomField>
    <fullName>OB230__c</fullName>
    <label>OB230</label>
    <length>255</length>
    <type>Text</type>
</CustomField>