force-app/main/default/objects/Flame_Product__c/fields/OB240__c.field-meta.xml
<CustomField>
    <fullName>OB240__c</fullName>
    <label>OB240</label>
    <length>255</length>
    <type>Text</type>
</CustomField>