force-app/main/default/objects/Flame_Product__c/fields/Offset_or_Concentric_Bases__c.field-meta.xml
<CustomField>
    <fullName>Offset_or_Concentric_Bases__c</fullName>
    <label>Offset or Concentric Bases?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offset</fullName>
            </value>
            <value>
                <fullName>Concentric</fullName>
            </value>
            <value>
                <fullName>BothOffCon</fullName>
                <default>true</default>
                <label>Both</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>