force-app/main/default/objects/Flame_Product__c/fields/Operational_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Operational_Pressure__c</fullName>
    <label>Operational Pressure</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>