force-app/main/default/objects/Flame_Product__c/fields/Operational_Pressure_Units__c.field-meta.xml
<CustomField>
    <fullName>Operational_Pressure_Units__c</fullName>
    <label>Operational Pressure Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>psia</fullName>
            </value>
            <value>
                <fullName>atm abs</fullName>
            </value>
            <value>
                <fullName>kPa abs</fullName>
            </value>
            <value>
                <fullName>bar abs</fullName>
            </value>
            <value>
                <fullName>kgf/cm2 abs</fullName>
            </value>
            <value>
                <fullName>mbar abs</fullName>
            </value>
            <value>
                <fullName>MPa abs</fullName>
            </value>
            <value>
                <fullName>Pa abs</fullName>
            </value>
            <value>
                <fullName>MPa</fullName>
                <isActive>false</isActive>
                <label>MPa</label>
            </value>
            <value>
                <fullName>Pa</fullName>
                <isActive>false</isActive>
                <label>Pa</label>
            </value>
            <value>
                <fullName>atmg</fullName>
                <isActive>false</isActive>
                <label>atmg</label>
            </value>
            <value>
                <fullName>bard</fullName>
                <isActive>false</isActive>
                <label>bard</label>
            </value>
            <value>
                <fullName>barg</fullName>
                <isActive>false</isActive>
                <label>barg</label>
            </value>
            <value>
                <fullName>gf/cm2</fullName>
                <isActive>false</isActive>
                <label>gf/cm2</label>
            </value>
            <value>
                <fullName>in. Hg</fullName>
                <isActive>false</isActive>
                <label>in. Hg</label>
            </value>
            <value>
                <fullName>in. water</fullName>
                <isActive>false</isActive>
                <label>in. water</label>
            </value>
            <value>
                <fullName>kPa</fullName>
                <isActive>false</isActive>
                <label>kPa</label>
            </value>
            <value>
                <fullName>kgf/cm2</fullName>
                <isActive>false</isActive>
                <label>kgf/cm2</label>
            </value>
            <value>
                <fullName>mbarg</fullName>
                <isActive>false</isActive>
                <label>mbarg</label>
            </value>
            <value>
                <fullName>mm Hg</fullName>
                <isActive>false</isActive>
                <label>mm Hg</label>
            </value>
            <value>
                <fullName>mm water</fullName>
                <isActive>false</isActive>
                <label>mm water</label>
            </value>
            <value>
                <fullName>osig</fullName>
                <isActive>false</isActive>
                <label>osig</label>
            </value>
            <value>
                <fullName>psid</fullName>
                <isActive>false</isActive>
                <label>psid</label>
            </value>
            <value>
                <fullName>psig</fullName>
                <isActive>false</isActive>
                <label>psig</label>
            </value>
            <value>
                <fullName>torr</fullName>
                <isActive>false</isActive>
                <label>torr</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>