force-app/main/default/objects/Flame_Product__c/fields/Operational_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Operational_Temperature__c</fullName>
    <defaultValue>&quot;-4 F to 140 F (-20 C to 60 C)&quot;</defaultValue>
    <label>Operational Temperature</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-4°F to 140°F (-20°C to 60°C)</fullName>
                <default>true</default>
                <label>-4°F to 140°F (-20°C to 60°C)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>