force-app/main/default/objects/Flame_Product__c/fields/Outlet_Option_A__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Option_A__c</fullName>
    <label>Outlet Option A</label>
    <length>255</length>
    <type>Text</type>
</CustomField>