force-app/main/default/objects/Flame_Product__c/fields/Outlet_Option_C__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Option_C__c</fullName>
    <label>Outlet Option C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>