force-app/main/default/objects/Flame_Product__c/fields/OW140__c.field-meta.xml
<CustomField>
    <fullName>OW140__c</fullName>
    <label>OW140</label>
    <length>255</length>
    <type>Text</type>
</CustomField>