force-app/main/default/objects/Flame_Product__c/fields/Pallet_Material__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Material__c</fullName>
    <label>Pallet Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>