force-app/main/default/objects/Flame_Product__c/fields/Part_Number_Base__c.field-meta.xml
<CustomField>
    <fullName>Part_Number_Base__c</fullName>
    <label>ASSYPARTNOBASE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>