force-app/main/default/objects/Flame_Product__c/fields/PartNumberBase_Flag__c.field-meta.xml
<CustomField>
    <fullName>PartNumberBase_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PartNumberBase Flag</label>
    <type>Checkbox</type>
</CustomField>