force-app/main/default/objects/Flame_Product__c/fields/PARTREV__c.field-meta.xml
<CustomField>
    <fullName>PARTREV__c</fullName>
    <label>PARTREV</label>
    <length>30</length>
    <type>Text</type>
</CustomField>