force-app/main/default/objects/Flame_Product__c/fields/PC410__c.field-meta.xml
<CustomField>
    <fullName>PC410__c</fullName>
    <label>PC410</label>
    <length>255</length>
    <type>Text</type>
</CustomField>