force-app/main/default/objects/Flame_Product__c/fields/PC421__c.field-meta.xml
<CustomField>
    <fullName>PC421__c</fullName>
    <label>PC421</label>
    <length>255</length>
    <type>Text</type>
</CustomField>