force-app/main/default/objects/Flame_Product__c/fields/PC430__c.field-meta.xml
<CustomField>
    <fullName>PC430__c</fullName>
    <label>PC430</label>
    <length>255</length>
    <type>Text</type>
</CustomField>