force-app/main/default/objects/Flame_Product__c/fields/Pipe_Design__c.field-meta.xml
<CustomField>
    <fullName>Pipe_Design__c</fullName>
    <label>Pipe Design</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open End</fullName>
            </value>
            <value>
                <fullName>Closed End</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>