force-app/main/default/objects/Flame_Product__c/fields/PMI_Display_Flag__c.field-meta.xml
<CustomField>
    <fullName>PMI_Display_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PMI Display Flag</label>
    <type>Checkbox</type>
</CustomField>