force-app/main/default/objects/Flame_Product__c/fields/Positive_Material_Identification__c.field-meta.xml
<CustomField>
    <fullName>Positive_Material_Identification__c</fullName>
    <label>Positive Material Identification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>