force-app/main/default/objects/Flame_Product__c/fields/PresRatio__c.field-meta.xml
<CustomField>
    <fullName>PresRatio__c</fullName>
    <label>PresRatio</label>
    <precision>17</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>