force-app/main/default/objects/Flame_Product__c/fields/Pressure_of_flowing_Vapor__c.field-meta.xml
<CustomField>
    <fullName>Pressure_of_flowing_Vapor__c</fullName>
    <label>Pressure of Flowing Vapor</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>