force-app/main/default/objects/Flame_Product__c/fields/Pressure_of_flowing_Vapor_Units__c.field-meta.xml
<CustomField>
    <fullName>Pressure_of_flowing_Vapor_Units__c</fullName>
    <label>Pressure of Flowing Vapor Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>psig</fullName>
            </value>
            <value>
                <fullName>barg</fullName>
            </value>
            <value>
                <fullName>kgf/cm2</fullName>
            </value>
            <value>
                <fullName>in. water</fullName>
            </value>
            <value>
                <fullName>osig</fullName>
            </value>
            <value>
                <fullName>mbarg</fullName>
            </value>
            <value>
                <fullName>mm water</fullName>
            </value>
            <value>
                <fullName>in. Hg</fullName>
            </value>
            <value>
                <fullName>mm Hg</fullName>
            </value>
            <value>
                <fullName>gf/cm2</fullName>
            </value>
            <value>
                <fullName>Pa</fullName>
            </value>
            <value>
                <fullName>kPa</fullName>
            </value>
            <value>
                <fullName>MPa</fullName>
            </value>
            <value>
                <fullName>torr</fullName>
            </value>
            <value>
                <fullName>atmg</fullName>
            </value>
            <value>
                <fullName>bard</fullName>
            </value>
            <value>
                <fullName>psid</fullName>
            </value>
            <value>
                <fullName>psia</fullName>
            </value>
            <value>
                <fullName>MPa abs.</fullName>
                <isActive>false</isActive>
                <label>MPa abs.</label>
            </value>
            <value>
                <fullName>atm abs.</fullName>
                <isActive>false</isActive>
                <label>atm abs.</label>
            </value>
            <value>
                <fullName>bar abs.</fullName>
                <isActive>false</isActive>
                <label>bar abs.</label>
            </value>
            <value>
                <fullName>kPa abs.</fullName>
                <isActive>false</isActive>
                <label>kPa abs.</label>
            </value>
            <value>
                <fullName>kgf/cm2 abs.</fullName>
                <isActive>false</isActive>
                <label>kgf/cm2 abs.</label>
            </value>
            <value>
                <fullName>mbar abs.</fullName>
                <isActive>false</isActive>
                <label>mbar abs.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>