force-app/main/default/objects/Flame_Product__c/fields/Pressure_Setting__c.field-meta.xml
<CustomField>
    <fullName>Pressure_Setting__c</fullName>
    <label>Pressure Setting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>