force-app/main/default/objects/Flame_Product__c/fields/Product_Material_and_Options_flag__c.field-meta.xml
<CustomField>
    <fullName>Product_Material_and_Options_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Material and Options flag</label>
    <type>Checkbox</type>
</CustomField>