force-app/main/default/objects/Flame_Product__c/fields/Product_Narrowing_flag__c.field-meta.xml
<CustomField>
    <fullName>Product_Narrowing_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Narrowing flag</label>
    <type>Checkbox</type>
</CustomField>