force-app/main/default/objects/Flame_Product__c/fields/Product_selection_flag__c.field-meta.xml
<CustomField>
    <fullName>Product_selection_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product selection flag</label>
    <type>Checkbox</type>
</CustomField>