force-app/main/default/objects/Flame_Product__c/fields/PTC__c.field-meta.xml
<CustomField>
    <fullName>PTC__c</fullName>
    <label>PTC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>