force-app/main/default/objects/Flame_Product__c/fields/Radiography_Display_Flag__c.field-meta.xml
<CustomField>
    <fullName>Radiography_Display_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Radiography Display Flag</label>
    <type>Checkbox</type>
</CustomField>