force-app/main/default/objects/Flame_Product__c/fields/Ratio_of_Specific_Heats__c.field-meta.xml
<CustomField>
    <fullName>Ratio_of_Specific_Heats__c</fullName>
    <label>Ratio of Specific Heats (k)</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>