force-app/main/default/objects/Flame_Product__c/fields/Required_Flow_Rate__c.field-meta.xml
<CustomField>
    <fullName>Required_Flow_Rate__c</fullName>
    <label>Required Flow Rate</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>