force-app/main/default/objects/Flame_Product__c/fields/Run_Up_Length_A_Input__c.field-meta.xml
<CustomField>
    <fullName>Run_Up_Length_A_Input__c</fullName>
    <label>Run Up Length A</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>