force-app/main/default/objects/Flame_Product__c/fields/Run_Up_Length_A_Input_Units__c.field-meta.xml
<CustomField>
    <fullName>Run_Up_Length_A_Input_Units__c</fullName>
    <label>Run Up Length A Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>in</fullName>
            </value>
            <value>
                <fullName>ft</fullName>
            </value>
            <value>
                <fullName>cm</fullName>
            </value>
            <value>
                <fullName>m</fullName>
            </value>
            <value>
                <fullName>mm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>