force-app/main/default/objects/Flame_Product__c/fields/Schedule_BaseLead__c.field-meta.xml
<CustomField>
    <fullName>Schedule_BaseLead__c</fullName>
    <label>Schedule_BaseLead</label>
    <length>100</length>
    <type>Text</type>
</CustomField>