force-app/main/default/objects/Flame_Product__c/fields/Side_of_FA_whr_flwng_prssur_is_indicated__c.field-meta.xml
<CustomField>
    <fullName>Side_of_FA_whr_flwng_prssur_is_indicated__c</fullName>
    <label>Side of FA where flowng presur is indctd</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inlet</fullName>
            </value>
            <value>
                <fullName>Outlet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>