force-app/main/default/objects/Flame_Product__c/fields/Sizing_Flow_Area_flag__c.field-meta.xml
<CustomField>
    <fullName>Sizing_Flow_Area_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sizing/Flow Area flag</label>
    <type>Checkbox</type>
</CustomField>