force-app/main/default/objects/Flame_Product__c/fields/Spring_Range__c.field-meta.xml
<CustomField>
    <fullName>Spring_Range__c</fullName>
    <label>Spring Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>