force-app/main/default/objects/Flame_Product__c/fields/Ultrasonic_Examination_Backend__c.field-meta.xml
<CustomField>
    <fullName>Ultrasonic_Examination_Backend__c</fullName>
    <formula>IF(Ultrasonic_Examination__c,&apos;Y&apos;,&apos;N&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ultrasonic Examination Backend</label>
    <type>Text</type>
</CustomField>