force-app/main/default/objects/Flame_Product__c/fields/US_Coast_guard__c.field-meta.xml
<CustomField>
    <fullName>US_Coast_guard__c</fullName>
    <label>US Coast guard</label>
    <length>10</length>
    <type>Text</type>
</CustomField>