force-app/main/default/objects/Flame_Product__c/fields/Visual_Casting_Examination_Backend__c.field-meta.xml
<CustomField>
    <fullName>Visual_Casting_Examination_Backend__c</fullName>
    <formula>IF(Visual_Casting_Examination__c,&apos;Y&apos;,&apos;N&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visual Casting Examination Backend</label>
    <type>Text</type>
</CustomField>