force-app/main/default/objects/Flame_Product__c/validationRules/Atmospheric_Pressure_Constraint.validationRule-meta.xml
<ValidationRule>
    <fullName>Atmospheric_Pressure_Constraint</fullName>
    <active>true</active>
    <description>This is a Mandatory field to be entered by the User.</description>
    <errorConditionFormula>AND(
ISBLANK(  Atmospheric_Pressure__c ),
Bypass__c = FALSE,
Sizing_Flow_Area_flag__c=true
				)</errorConditionFormula>
    <errorDisplayField>Atmospheric_Pressure__c</errorDisplayField>
    <errorMessage>Please Enter a Value</errorMessage>
</ValidationRule>