force-app/main/default/objects/Flame_Product__c/validationRules/Atmospheric_Pressure_Units_Constraint.validationRule-meta.xml
<ValidationRule>
    <fullName>Atmospheric_Pressure_Units_Constraint</fullName>
    <active>true</active>
    <description>This is a Mandatory field to be entered by the User.</description>
    <errorConditionFormula>AND(
ISBLANK(TEXT(  Atmospheric_Pressure_Units__c )),
Bypass__c = FALSE,
Sizing_Flow_Area_flag__c=true
)</errorConditionFormula>
    <errorDisplayField>Atmospheric_Pressure_Units__c</errorDisplayField>
    <errorMessage>Please Select any one of the following</errorMessage>
</ValidationRule>