force-app/main/default/objects/Flame_Product__c/validationRules/Atmospheric_Zero_Constraints.validationRule-meta.xml
<ValidationRule>
    <fullName>Atmospheric_Zero_Constraints</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Atmospheric_Pressure__c &lt;= 0,
Sizing_Flow_Area_flag__c=true
)</errorConditionFormula>
    <errorDisplayField>Atmospheric_Pressure__c</errorDisplayField>
    <errorMessage>Atmospheric Pressure: Please enter a positive Integer value greater than 0.</errorMessage>
</ValidationRule>