force-app/main/default/objects/Flame_Product__c/validationRules/Body_Material_Constraint.validationRule-meta.xml
<ValidationRule>
    <fullName>Body_Material_Constraint</fullName>
    <active>true</active>
    <description>This is a Mandatory field to be entered by the User.</description>
    <errorConditionFormula>AND(
ISBLANK(Body_Material__c),
Bypass__c = FALSE,
Product_Material_and_Options_flag__c=true
)</errorConditionFormula>
    <errorMessage>Body Material : Please select a value from the drop down</errorMessage>
</ValidationRule>