force-app/main/default/objects/Flame_Product__c/validationRules/Compressibility_Factor_Constraint.validationRule-meta.xml
<ValidationRule>
    <fullName>Compressibility_Factor_Constraint</fullName>
    <active>true</active>
    <description>This is a Mandatory field to be entered by the User.</description>
    <errorConditionFormula>AND(
ISBLANK(  Compressibility_Factor__c ),
Bypass__c = FALSE,
Sizing_Flow_Area_flag__c=true
				)</errorConditionFormula>
    <errorDisplayField>Compressibility_Factor__c</errorDisplayField>
    <errorMessage>Please Enter a Value</errorMessage>
</ValidationRule>