force-app/main/default/objects/Flame_Product__c/validationRules/Connection_Size_Constraint.validationRule-meta.xml
<ValidationRule>
    <fullName>Connection_Size_Constraint</fullName>
    <active>false</active>
    <description>This is a Mandatory field to be entered by the User.</description>
    <errorConditionFormula>AND(
ISBLANK( Connection_Size__c ),
NOT(ISBLANK(Model__c)),  
Bypass__c = FALSE,
				
Product_selection_flag__c=true
)</errorConditionFormula>
    <errorDisplayField>Connection_Size__c</errorDisplayField>
    <errorMessage>Please Select any one of the following</errorMessage>
</ValidationRule>