force-app/main/default/objects/Flame_Product__c/validationRules/Do_you_have_a_closed_or_open_end_pipe.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_you_have_a_closed_or_open_end_pipe</fullName>
    <active>false</active>
    <description>This is a Mandatory field to be entered by the User.</description>
    <errorConditionFormula>AND(
ISBLANK(TEXT(Do_you_have_a_closed_or_open_end_pipe__c )),
Bypass__c = FALSE,
Application_Parameters_flag__c = true
				)</errorConditionFormula>
    <errorDisplayField>Do_you_have_a_closed_or_open_end_pipe__c</errorDisplayField>
    <errorMessage>Please Select any one of the following</errorMessage>
</ValidationRule>