force-app/main/default/objects/Flame_Product__c/validationRules/Drilling_Constraint.validationRule-meta.xml
<ValidationRule>
    <fullName>Drilling_Constraint</fullName>
    <active>true</active>
    <description>This is a Mandatory field to be entered by the User.</description>
    <errorConditionFormula>AND(
ISBLANK(Drilling__c),
Bypass__c = FALSE,
Product_Material_and_Options_flag__c=true
)</errorConditionFormula>
    <errorMessage>Drilling : Please select a value from the drop down</errorMessage>
</ValidationRule>